fix(scaler): add std_scaler

--- a/features.ipynb
+++ b/features.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,23 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "X['publishers_count'] = X['publishers'].apply(lambda s: s.count(',')+1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for column in X.columns: \n",
-    "    if column in ['publishers', 'user_ids']:\n",
-    "        continue\n",
-    "    X[column] = (X[column] - X[column].mean()) / X[column].std() "
    ]
   },
   {
@@ -325,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,6 +328,260 @@
     "\n",
     "# Объединяем фильтрованный X с целевыми переменными Y для анализа корреляции\n",
     "df_filtered = pd.concat([X_filtered, Y], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p1</th>\n",
+       "      <th>remaining_time_to_next_ad</th>\n",
+       "      <th>delay</th>\n",
+       "      <th>cpm</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>avg_session_duration</th>\n",
+       "      <th>history_cpm_mean</th>\n",
+       "      <th>adv_shown_freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>16.465987</td>\n",
+       "      <td>95</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.307215</td>\n",
+       "      <td>182.601274</td>\n",
+       "      <td>28.345750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>312.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.930229</td>\n",
+       "      <td>161.664927</td>\n",
+       "      <td>111.023913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.602210</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>0.231097</td>\n",
+       "      <td>1.403216</td>\n",
+       "      <td>189.008256</td>\n",
+       "      <td>35.460586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.596300</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>82</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.273345</td>\n",
+       "      <td>186.518206</td>\n",
+       "      <td>33.536364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.671654</td>\n",
+       "      <td>182.393071</td>\n",
+       "      <td>238</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.256489</td>\n",
+       "      <td>219.061404</td>\n",
+       "      <td>17.206640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>59</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>0.249642</td>\n",
+       "      <td>1.275576</td>\n",
+       "      <td>176.581190</td>\n",
+       "      <td>26.570652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1004</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.294618</td>\n",
+       "      <td>1.435556</td>\n",
+       "      <td>176.057167</td>\n",
+       "      <td>29.138430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1005</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>0.258275</td>\n",
+       "      <td>1.773701</td>\n",
+       "      <td>158.432412</td>\n",
+       "      <td>80.681818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1006</th>\n",
+       "      <td>0.528710</td>\n",
+       "      <td>168.445755</td>\n",
+       "      <td>237</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>0.297086</td>\n",
+       "      <td>1.320440</td>\n",
+       "      <td>185.783577</td>\n",
+       "      <td>21.272727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>0.562129</td>\n",
+       "      <td>9.221133</td>\n",
+       "      <td>59</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.360354</td>\n",
+       "      <td>190.742997</td>\n",
+       "      <td>19.862000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1008 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            p1  remaining_time_to_next_ad  delay    cpm        p2  \\\n",
+       "0     0.000000                  16.465987     95  220.0  0.000000   \n",
+       "1     0.000000                   0.000000      6  312.0  0.000000   \n",
+       "2     0.602210                   0.000000     20   70.0  0.231097   \n",
+       "3     0.596300                   0.000000     82  240.0  0.000000   \n",
+       "4     0.671654                 182.393071    238  262.0  0.000000   \n",
+       "...        ...                        ...    ...    ...       ...   \n",
+       "1003  0.000000                   0.000000     59  127.0  0.249642   \n",
+       "1004  0.000000                   0.000000      4   90.0  0.294618   \n",
+       "1005  0.000000                   0.000000      5  122.0  0.258275   \n",
+       "1006  0.528710                 168.445755    237  138.0  0.297086   \n",
+       "1007  0.562129                   9.221133     59   35.0  0.000000   \n",
+       "\n",
+       "      avg_session_duration  history_cpm_mean  adv_shown_freq  \n",
+       "0                 1.307215        182.601274       28.345750  \n",
+       "1                 1.930229        161.664927      111.023913  \n",
+       "2                 1.403216        189.008256       35.460586  \n",
+       "3                 1.273345        186.518206       33.536364  \n",
+       "4                 1.256489        219.061404       17.206640  \n",
+       "...                    ...               ...             ...  \n",
+       "1003              1.275576        176.581190       26.570652  \n",
+       "1004              1.435556        176.057167       29.138430  \n",
+       "1005              1.773701        158.432412       80.681818  \n",
+       "1006              1.320440        185.783577       21.272727  \n",
+       "1007              1.360354        190.742997       19.862000  \n",
+       "\n",
+       "[1008 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_filtered"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Обучение StandartScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StandardScaler()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['std_scaler.bin']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump\n",
+    "\n",
+    "dump(scaler, 'std_scaler.bin', compress=True)"
    ]
   },
   {
@@ -407,7 +649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
