--- a/model_Timur.ipynb
+++ b/model_Timur.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,208 @@
     "       'avg_session_duration',\n",
     "       'history_cpm_mean',\n",
     "       'adv_shown_freq']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p1</th>\n",
+       "      <th>remaining_time_to_next_ad</th>\n",
+       "      <th>delay</th>\n",
+       "      <th>cpm</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>avg_session_duration</th>\n",
+       "      <th>history_cpm_mean</th>\n",
+       "      <th>adv_shown_freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.942728</td>\n",
+       "      <td>-0.431918</td>\n",
+       "      <td>-0.048882</td>\n",
+       "      <td>0.513173</td>\n",
+       "      <td>-0.993429</td>\n",
+       "      <td>0.031297</td>\n",
+       "      <td>-0.213110</td>\n",
+       "      <td>-0.091844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.942728</td>\n",
+       "      <td>-0.579641</td>\n",
+       "      <td>-0.753012</td>\n",
+       "      <td>1.333189</td>\n",
+       "      <td>-0.993429</td>\n",
+       "      <td>1.405716</td>\n",
+       "      <td>-0.360443</td>\n",
+       "      <td>3.411903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.060135</td>\n",
+       "      <td>-0.579641</td>\n",
+       "      <td>-0.642250</td>\n",
+       "      <td>-0.823809</td>\n",
+       "      <td>0.825614</td>\n",
+       "      <td>0.243083</td>\n",
+       "      <td>-0.168024</td>\n",
+       "      <td>0.209669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.040478</td>\n",
+       "      <td>-0.579641</td>\n",
+       "      <td>-0.151733</td>\n",
+       "      <td>0.691437</td>\n",
+       "      <td>-0.993429</td>\n",
+       "      <td>-0.043422</td>\n",
+       "      <td>-0.185546</td>\n",
+       "      <td>0.128124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.291095</td>\n",
+       "      <td>1.056681</td>\n",
+       "      <td>1.082473</td>\n",
+       "      <td>0.887528</td>\n",
+       "      <td>-0.993429</td>\n",
+       "      <td>-0.080610</td>\n",
+       "      <td>0.043465</td>\n",
+       "      <td>-0.563899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>-0.942728</td>\n",
+       "      <td>-0.579641</td>\n",
+       "      <td>-0.333699</td>\n",
+       "      <td>-0.315756</td>\n",
+       "      <td>0.971592</td>\n",
+       "      <td>-0.038502</td>\n",
+       "      <td>-0.255475</td>\n",
+       "      <td>-0.167070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1004</th>\n",
+       "      <td>-0.942728</td>\n",
+       "      <td>-0.579641</td>\n",
+       "      <td>-0.768836</td>\n",
+       "      <td>-0.645545</td>\n",
+       "      <td>1.325615</td>\n",
+       "      <td>0.314428</td>\n",
+       "      <td>-0.259162</td>\n",
+       "      <td>-0.058252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1005</th>\n",
+       "      <td>-0.942728</td>\n",
+       "      <td>-0.579641</td>\n",
+       "      <td>-0.760924</td>\n",
+       "      <td>-0.360322</td>\n",
+       "      <td>1.039542</td>\n",
+       "      <td>1.060403</td>\n",
+       "      <td>-0.383190</td>\n",
+       "      <td>2.126062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1006</th>\n",
+       "      <td>0.815684</td>\n",
+       "      <td>0.931554</td>\n",
+       "      <td>1.074561</td>\n",
+       "      <td>-0.217711</td>\n",
+       "      <td>1.345042</td>\n",
+       "      <td>0.060473</td>\n",
+       "      <td>-0.190716</td>\n",
+       "      <td>-0.391586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>0.926830</td>\n",
+       "      <td>-0.496914</td>\n",
+       "      <td>-0.333699</td>\n",
+       "      <td>-1.135772</td>\n",
+       "      <td>-0.993429</td>\n",
+       "      <td>0.148525</td>\n",
+       "      <td>-0.155816</td>\n",
+       "      <td>-0.451370</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1008 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            p1  remaining_time_to_next_ad     delay       cpm        p2  \\\n",
+       "0    -0.942728                  -0.431918 -0.048882  0.513173 -0.993429   \n",
+       "1    -0.942728                  -0.579641 -0.753012  1.333189 -0.993429   \n",
+       "2     1.060135                  -0.579641 -0.642250 -0.823809  0.825614   \n",
+       "3     1.040478                  -0.579641 -0.151733  0.691437 -0.993429   \n",
+       "4     1.291095                   1.056681  1.082473  0.887528 -0.993429   \n",
+       "...        ...                        ...       ...       ...       ...   \n",
+       "1003 -0.942728                  -0.579641 -0.333699 -0.315756  0.971592   \n",
+       "1004 -0.942728                  -0.579641 -0.768836 -0.645545  1.325615   \n",
+       "1005 -0.942728                  -0.579641 -0.760924 -0.360322  1.039542   \n",
+       "1006  0.815684                   0.931554  1.074561 -0.217711  1.345042   \n",
+       "1007  0.926830                  -0.496914 -0.333699 -1.135772 -0.993429   \n",
+       "\n",
+       "      avg_session_duration  history_cpm_mean  adv_shown_freq  \n",
+       "0                 0.031297         -0.213110       -0.091844  \n",
+       "1                 1.405716         -0.360443        3.411903  \n",
+       "2                 0.243083         -0.168024        0.209669  \n",
+       "3                -0.043422         -0.185546        0.128124  \n",
+       "4                -0.080610          0.043465       -0.563899  \n",
+       "...                    ...               ...             ...  \n",
+       "1003             -0.038502         -0.255475       -0.167070  \n",
+       "1004              0.314428         -0.259162       -0.058252  \n",
+       "1005              1.060403         -0.383190        2.126062  \n",
+       "1006              0.060473         -0.190716       -0.391586  \n",
+       "1007              0.148525         -0.155816       -0.451370  \n",
+       "\n",
+       "[1008 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
    ]
   },
   {
@@ -672,7 +874,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -686,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
